--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:create": "yarn sequelize-cli db:create",
+    "db:drop": "yarn sequelize-cli db:drop",
+    "db:migrate": "yarn sequelize-cli db:migrate",
+    "db:seed:all": "yarn sequelize-cli db:seed:all"
   },
   "author": "",
   "license": "MIT",
